[package]
name = "vccat_browser"
version = "0.2.0"
edition = "2021"

[dependencies]
wry        = "0.43"
tao        = "0.30"
urlencoding = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
reqwest     = { version = "0.12", features = ["blocking", "json"] }
semver      = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"